assets/css/style.css
/* Google Fonts */
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Oswald:wght@500&display=swap");

/* Asterisk wildcard selector to override default styles added by the browser */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/* General styles */
body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  font-family: "Montserrat", sans-serif;
  background-color: #e7eef4;
}

a,
button {
  text-decoration: none;
}

ul {
  list-style-type: none;
}

h1,
h2 {
  font-family: "Oswald", sans-serif;
}

iframe {
  width: 100%;
  height: 352px;
  border-radius: 12px;
  border: none;
}

/* Navigation bar */
header {
  width: 100%;
  height: 75px;
  background-color: #1d1d25;
  padding: 10px 20px;
  position: sticky;
  top: 0;
  z-index: 99;
  /* Flexbox properties */
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* Logo, tags and label/buttons color */
.logo,
nav ul li a,
label {
  color: #ff8c00;
}

/* Hiding icons on larger screens */
header label {
  display: none;
}

nav ul {
  display: flex;
  gap: 2rem;
}

nav ul li a:hover {
  border-bottom: 1px solid #ff8c00;
}

#nav-menu {
  display: none;
}

/* Main content */
main {
  flex: 1 0 auto;
  background-color: #e7eef4;
}

/* <--- Landing page ---> */

/* Hero section */
.hero {
  height: 600px;
  display: flex;
}

.hero-image {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("../images/hero-image.webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  width: 100%;
  height: 600px;
  /* Positioning image relative so that the hero text will fit within the image. */
  position: relative;
}

.hero-text {
  background-color: rgba(226, 94, 15, 0.7);
  color: #e7eef4;
  font-size: 120%;
  position: absolute;
  bottom: 100px;
  left: 0;
  width: 80%;
  align-self: center;
  padding: 20px 10px;
}

.hero-text h2 {
  font-size: 30px;
}

.hero-text h3 {
  margin-top: 10px;
  font-size: 20px;
}

/* features section */
.features {
  margin-bottom: 5%;
}

.features h2 {
  font-size: 36px;
  text-align: center;
  padding: 10px 0;
}

.feat-container {
  width: 100%;
  background-color: #1d1d25;
  display: inline-flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.feat-box {
  color: #ff8c00;
  font-size: 24px;
  padding: 15px;
  text-align: center;
  border: 2px solid #e7eef4;
  flex-grow: 1;
  flex-basis: 200px;
}

.feat-box p {
  font-size: 24px;
  margin-top: 20px;
}

/* Connect section */
.connect {
  background-color: #1d1d25;
}

.connect h2 {
  padding: 15px;
  text-align: center;
  color: #fff;
  font-size: 32px;
}

.meetups {
  background: url("../images/meetups-img.webp") no-repeat center/cover;
  display: inline-flex;
  flex-wrap: wrap;
  width: 100%;
}

.meetups div {
  color: #e7eef4;
  background-color: rgba(0, 0, 0, 0.7);
  padding: 15px;
  text-align: center;
  flex-basis: 200px;
  flex-grow: 1;
  border: 2px solid #e7eef4;
}

.meetups h3 {
  color: #ff8c00;
  margin: 5% 0;
  font-family: "Oswald", sans-serif;
  letter-spacing: 1.5px;
}

.meetups p {
  padding: 10px 0;
}

.meetups a {
  color: #ff8c00;
}

.meetups a:hover {
  color: #e7eef4;
  border-bottom: 2px solid #ff8c00;
}

/* <--- Artist Page ---> */

/* Card section */
.card-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.card {
  background-color: #1d1d25;
  border-radius: 7px;
  overflow: hidden;
  box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.2);
  margin: 20px;
  width: 280px;
}

.avatar {
  width: 280px;
  height: 280px;
}

/* Adds padding to the information inside of the card */
.card-details {
  padding: 16px;
}

.card-details h2 {
  font-size: 28px;
  margin-bottom: 8px;
  letter-spacing: 1.5px;
  color: #fff;
}

.card-details p {
  height: 80px;
  color: #fff;
  font-size: 16px;
}

.card-details .card-btn {
  display: inline-block;
  padding: 10px 16px;
  background-color: #ff8c00;
  text-decoration: none;
  border-radius: 4px;
  margin-top: 16px;
  color: #000;
  font-weight: 600;
}

/* Artist section */
.about {
  background-color: #1d1d25;
  /* Flexbox properties */
  display: flex;
  flex-flow: column;
  align-items: center;
}

.section-reverse {
  background-color: #e7eef4;
}

.about .artist-content img {
  height: 600px;
  width: 600px;
  max-width: 100%;
  border-radius: 50%;
  object-fit: cover;
}

.artist-content {
  max-width: 100%;
  padding: 0 10px;
  display: inherit;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.artist-content .artist-content-socials {
  margin-top: 20px;
  margin-left: 12px;
  font-size: 24px;
  letter-spacing: 15px;
}

.artist-content .artist-content-socials a {
  color: #fff;
}

.artist-about {
  max-width: 100%;
  padding: 0 10px;
  display: inherit;
  flex-direction: column;
  text-align: center;
}

.about-reverse .artist-info p {
  color: #1d1d25;
  font-size: 18px;
  line-height: 24px;
}

.about-reverse .artist-info .biography {
  color: #1d1d25;
}

.artist-about div {
  display: inherit;
  flex-direction: inherit;
  justify-content: space-evenly;
  align-items: center;
}

.artist-info h2,
.artist-info p,
.artist-info a {
  margin: 20px 0;
}

.artist-info h2 {
  font-size: 85px;
  text-transform: capitalize;
}

.info-heading {
  color: #fff;
}

.info-heading-reverse {
  color: #1d1d25;
}

.artist-info p {
  color: #fff;
  font-size: 18px;
  font-weight: bolder;
  line-height: 24px;
}

.artist-about .biography {
  max-width: 150px;
  max-height: 50px;
  background-color: #ff8c00;
  color: #1d1d25;
  font-size: 18px;
  border-radius: 4px;
  padding: 10px 30px;
  font-weight: 600;
}

/* Up button */
.scroll-container {
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
}
/* ... */

